--- a/RealStateManagementSystem.SPA/package.json
+++ b/RealStateManagementSystem.SPA/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules/.bin/lite-server"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,8 @@
   "dependencies": {
     "angular": "^1.7.9",
     "angular-route": "^1.7.9",
-    "bootstrap": "^4.4.1"
+    "bootstrap": "^4.4.1",
+    "lite-server": "^2.5.4",
+    "oclazyload": "^1.1.0"
   }
 }
